logs/triangula.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/euclid-0.1.egg-info'...
Compiling './lib/python3.5/site-packages/euclid.py'...
***   File "./lib/python3.5/site-packages/euclid.py", line 137
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evdev'...
Listing './lib/python3.5/site-packages/evdev-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/include'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/gen_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/gen_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/pyrex_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/pyrex_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.10.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-2.7.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/triangula'...
Compiling './lib/python3.5/site-packages/triangula/arduino.py'...
***   File "./lib/python3.5/site-packages/triangula/arduino.py", line 8
    print 'Not importing smbus, expected during sphinx generation on OSX'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/triangula/chassis.py'...
***   File "./lib/python3.5/site-packages/triangula/chassis.py", line 16
    print chassis.get_wheel_speeds(Motion(translation=Vector2(0, 0), rotation=0.5))
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/triangula/imu.py'...
***   File "./lib/python3.5/site-packages/triangula/imu.py", line 19
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/triangula/input.py'...
***   File "./lib/python3.5/site-packages/triangula/input.py", line 9
    print 'Not importing evdev, expected during sphinx generation on OSX'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/triangula/task.py'...
***   File "./lib/python3.5/site-packages/triangula/task.py", line 221
    print exception
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/triangula-0.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
